--- a/tmux.conf
+++ b/tmux.conf
@@ -13,8 +13,6 @@ set-window-option -g window-status-attr default
 set-window-option -g window-status-current-fg green
 
 # clean status bar
-# setw -g window-status-format         ' #(echo "#{pane_current_command}") '
-# setw -g window-status-current-format ' #(echo "#{pane_current_command}") '
 setw -g window-status-format         ' #(echo "#W") '
 setw -g window-status-current-format ' #(echo "#W") '
 set -g status-left " "
@@ -32,7 +30,6 @@ bind-key -n M-1 new-window
 bind-key -n M-2 split-window -h
 
 bind-key -n M-a select-layout even-horizontal
-#bind-key -n M-d select-layout main-vertical
 bind-key -n M-d resize-pane -Z
 
 # Switch between windows with alt-vi, panes alt-dir
@@ -40,8 +37,6 @@ bind -n M-h select-pane -L
 bind -n M-Down select-pane -D
 bind -n M-Up select-pane -U
 bind -n M-l select-pane -R
-#bind-key -n M-j set-option -g status
-#bind-key -n M-k set-option -g status
 bind-key -n M-[ previous-window
 bind-key -n M-] next-window
 
@@ -50,10 +45,13 @@ setw -g mode-keys vi
 unbind -T copy-mode-vi MouseDragEnd1Pane
 
 # GRAVEYARD
-#unbind -t vi-copy MouseDragEnd1Pane
 #set-window-option -g window-status-current-bg default
 #set-window-option -g window-status-current-attr default
 #set-option -g message-fg white
 #set-option -g message-bg black
 #set-option -g message-attr bright
 #set -g status-justify left
+#bind-key -n M-j set-option -g status  # was for show/hide bottom
+#bind-key -n M-k set-option -g status
+# setw -g window-status-format         ' #(echo "#{pane_current_command}") '
+# setw -g window-status-current-format ' #(echo "#{pane_current_command}") '
