add vim plugins, change tmux.conf a lil

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,6 @@
 set -g mouse on
 set -s escape-time 0
-#set -g default-terminal "xterm-16color"
+set -g default-terminal "screen-256color"
 set-option -g status-position bottom
 set-window-option -g xterm-keys on
 set-option -g status-fg white
@@ -17,6 +17,11 @@ setw -g window-status-format         ' #(echo "#W") '
 setw -g window-status-current-format ' #(echo "#W") '
 set -g status-left " "
 set -g status-right " "
+
+# fix for vim-airline
+set -g default-terminal "screen-256color"
+#set-window-option -g utf8 on
+setw -q -g utf-8 on
 
 # Pane colors
 set -g pane-border-fg default
@@ -42,7 +47,7 @@ bind-key -n M-] next-window
 
 # Don't lose scroll position on highlight
 setw -g mode-keys vi
-unbind -T copy-mode-vi MouseDragEnd1Pane
+#unbind -T copy-mode-vi MouseDragEnd1Pane
 
 # GRAVEYARD
 #set-window-option -g window-status-current-bg default
