--- a/tmux.conf
+++ b/tmux.conf
@@ -5,12 +5,12 @@ set-option -g status-position bottom
 set-window-option -g xterm-keys on
 set-option -g status-fg white
 set-option -g status-bg default
-set-option -g status-attr default
+set-option -g status-style default
 
-set-window-option -g window-status-fg "#666666"
-set-window-option -g window-status-bg default
-set-window-option -g window-status-attr default
-set-window-option -g window-status-current-fg green
+set-window-option -g window-status-style fg="#666666"
+set-window-option -g window-status-style bg=default
+set-window-option -g window-status-style default
+set-window-option -g window-status-current-style fg=green
 
 # clean status bar
 setw -g window-status-format         ' #(echo "#W") '
@@ -24,9 +24,9 @@ set -g default-terminal "screen-256color"
 setw -q -g utf-8 on
 
 # Pane colors
-set -g pane-border-fg default
-set -g pane-active-border-fg default
-set -g pane-active-border-bg default
+set -g pane-border-style fg=default
+set -g pane-active-border-style fg=default
+set -g pane-active-border-style bg=default
 
 bind r source-file ~/.tmux.conf
 
@@ -41,6 +41,8 @@ bind-key -n M-d resize-pane -Z
 bind -n M-h select-pane -L
 bind -n M-Down select-pane -D
 bind -n M-Up select-pane -U
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
 bind -n M-l select-pane -R
 bind-key -n M-[ previous-window
 bind-key -n M-] next-window
@@ -49,14 +51,14 @@ bind-key -n M-] next-window
 setw -g mode-keys vi
 #unbind -T copy-mode-vi MouseDragEnd1Pane
 
-# GRAVEYARD
-#set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr default
-#set-option -g message-fg white
-#set-option -g message-bg black
-#set-option -g message-attr bright
-#set -g status-justify left
-#bind-key -n M-j set-option -g status  # was for show/hide bottom
-#bind-key -n M-k set-option -g status
-# setw -g window-status-format         ' #(echo "#{pane_current_command}") '
-# setw -g window-status-current-format ' #(echo "#{pane_current_command}") '
+# Plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+set -g @continuum-restore 'on'
+set -g @resurrect-processes 'vim'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
